NiFi/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nifi-azure-backup
  namespace: prod
spec:
  selector:
    matchLabels:
      app: nifi-azure-backup
  replicas: 1
  template:
    metadata:
      labels:
        app: nifi-azure-backup
    spec:
      hostAliases:
      - ip: "192.168.1.16"
        hostnames:
        - "example01p.blob.core.windows.net"
      - ip: "10.14.12.4"
        hostnames:
        - "example01d.blob.core.windows.net"

      # hostNetwork: true
      # dnsPolicy: ClusterFirstWithHostNet
      containers:
        - name: nifi-azure-backup
          image: apache/nifi:1.19.0
          imagePullPolicy: Always
          securityContext:
            runAsUser: 1000
            runAsGroup: 1000
          ports:
            - name: http
              containerPort: 8080
            - name: prometheus
              containerPort: 9092
          resources:
            requests:
              memory: "42Gi"
              cpu: "12000m"
            limits:
              memory: "60Gi"
              cpu: "16000m"
          volumeMounts:
            - name: nfs-mount
              mountPath: /opt/nifi/nifi-current/logs
              subPath: nifi-current/logs
            - name: nfs-mount
              mountPath: /opt/nifi/nifi-current/conf
              subPath: nifi-current/conf
            - name: nfs-mount
              mountPath: /opt/nifi/nifi-current/database_repository
              subPath: nifi-current/database_repository            
            - name: nfs-mount
              mountPath: /opt/nifi/scripts
              subPath: scripts 
            - name: nfs-mount
              mountPath: /opt/nifi/nifi-current/state
              subPath: nifi-current/state
            - name: nfs-mount
              mountPath: /opt/nifi/nifi-current/flowfile_repository
              subPath: nifi-current/flowfile_repository
            - name: nfs-mount
              mountPath: /opt/nifi/nifi-current/content_repository
              subPath: nifi-current/content_repository
            - name: nfs-mount
              mountPath: /opt/nifi/nifi-current/provenance_repository
              subPath: nifi-current/provenance_repository
            - name: nfs-mount
              mountPath: /usr/share/java
              subPath: java    
            - name: nfs-mount
              mountPath: /usr/hdf/current
              subPath: hdf         
            - name: nfs-mount
              mountPath: /home/nifi/nifi_monitoring
              subPath: nifi_monitoring    
      volumes:
        - name: nfs-mount
          persistentVolumeClaim:
            claimName: pvc-nfs-nifi-azure-backup
