NiFi/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nifi-azure-backup-ingress
  namespace: prod

  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/session-cookie-name: "route"
    nginx.ingress.kubernetes.io/session-cookie-hash: "sha1"
    nginx.ingress.kubernetes.io/session-cookie-expires: "172800"
    nginx.ingress.kubernetes.io/session-cookie-max-age: "172800"
    nginx.ingress.kubernetes.io/affinity-mode: "persistent"
    # nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  tls:
  - hosts:
    - nifi-azure-bkp.devops.example.com
    secretName: tls-devops-example-ua
  rules:
    - host: nifi-azure-bkp.devops.example.com
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: nifi-azure-backup
                port:
                  number: 8080
